[package]
name = "mineshake"
version = "0.1.2"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-futures = "0.2"

trust-dns-resolver = "0.20"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["net", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
