[package]
name = "mineshake"
version = "0.1.2"
authors = ["Syfaro <syfaro@huefox.com>"]
edition = "2018"

[dependencies]
tracing = "0.1"
tracing-futures = "0.2"

trust-dns-resolver = { version = "0.20", features = ["dns-over-rustls"] }
lazy_static = "1"
rand = "0.8"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["net", "io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
